Billing plan spacing fixed

--- a/style.css
+++ b/style.css
@@ -50,7 +50,7 @@ header {
  
  .big-padding {
     /* padding: 15px 45px; */
-    margin: 10px 0px 10px 0px;
+    margin: 20px 0px 15px 0px;
     height: 45px;
     width: 240px;   
     font-size: 16px; 
@@ -59,14 +59,15 @@ header {
  .center-button {
     width: 100%;
     text-align: center;
-
  }
+
+
 
  .horizontal {
     color: #DEDEE0;
     size: 1px;
     width: 60px;
-    margin: 20px 0px 40px 0px;
+    margin: 50px 0px 40px 0px;
  }
 
  li {
@@ -147,8 +148,10 @@ header {
 .column {
     border: solid 1px lightgray;
     width: 280px;
-    height: 1000px; 
+    height: 1050px; 
 }
+
+
 
 .intern-info {
     padding: 20px 15px 0px 15px;
@@ -182,7 +185,7 @@ header {
 
 .gray { 
     color: gray;
-    margin-bottom: 20px;
+    padding-bottom: 20px;
 }
 
 .check {
